fixed responsive sidebar word wrap

--- a/css/index.css
+++ b/css/index.css
@@ -57,10 +57,6 @@ body {
 
 nav {
   margin-top: 15rem;
-  /*  white-space: nowrap;*/
-  overflow-wrap: break-word;
-  word-wrap: break-word;
-  hyphens: auto;
   /*  margin: 0em 0 0 0;*/
   font-family: "Work Sans";
   font-size: 24px;
@@ -73,7 +69,7 @@ nav {
   nav ul {
     position: sticky;
     top: 10rem;
-    width: 80px;
+    width: 200px;
   }
 }
 
@@ -159,6 +155,7 @@ footer {
 @media only screen and (max-width: 800px) {
   nav {
     margin-top: 9rem;
+    width: 180px !important;
   }
 
   nav ul li a {
@@ -198,15 +195,20 @@ footer {
   }
 }
 
-@media only screen and (max-width: 400px) {
+@media only screen and (max-width: 500px) {
+
   nav {
     margin-top: 9rem;
+    overflow-wrap: break-word;
+    word-wrap: break-word;
+    hyphens: auto;
+    width: 70px !important;
   }
 
   nav ul li a {
     font-weight: 400;
     font-size: 11px;
-    width: 75px;
+    width: 70px;
   }
 
   nav ul li a.current {
